--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "scripts": {
         "build": "next build",
         "dev": "next dev",
+        "preinstall": "npx only-allow pnpm",
         "postinstall": "prisma generate",
         "lint": "next lint",
         "start": "next start"
     },
     "dependencies": {
         "@next-auth/prisma-adapter": "^1.0.4",
-        "@prisma/client": "^4.4.0",
+        "@prisma/client": "^4.5.0",
         "@tanstack/react-query": "^4.10.0",
         "@trpc/client": "10.0.0-proxy-beta.17",
         "@trpc/next": "10.0.0-proxy-beta.17",
@@ -39,7 +40,7 @@
         "postcss": "^8.4.14",
         "prettier": "^2.7.1",
         "prettier-plugin-tailwindcss": "^0.1.13",
-        "prisma": "^4.4.0",
+        "prisma": "^4.5.0",
         "tailwindcss": "^3.1.6",
         "typescript": "^4.8.4"
     },
